unpackaged/main/default/objects/Partner_Portal_File_Folder_Directory__mdt/Partner_Portal_File_Folder_Directory__mdt.object-meta.xml
<CustomObject>
    <description>Mapping for the Folder where the File should be moved to based on the User using the Partner Portal document upload</description>
    <label>Partner Portal File Folder Directory</label>
    <pluralLabel>Partner Portal File Folder Directories</pluralLabel>
</CustomObject>