unpackaged/main/default/objects/Partner_Portal_File_Folder_Directory__mdt/fields/Failure_Email__c.field-meta.xml
<CustomField>
    <fullName>Failure_Email__c</fullName>
    <label>Failure Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>