unpackaged/main/default/objects/Partner_Portal_File_Folder_Directory__mdt/fields/Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Folder_Name__c</fullName>
    <label>Folder Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>