unpackaged/main/default/objects/Partner_Portal_File_Folder_Directory__mdt/fields/Partner_Library_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Library_Id__c</fullName>
    <label>Partner Library Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>