unpackaged/main/default/objects/Partner_Portal_File_Folder_Directory__mdt/fields/Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Name__c</fullName>
    <description>Name of the Party the Contacts are associated with</description>
    <label>Party Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>