unpackaged/main/default/objects/Partner_Portal_File_Folder_Directory__mdt/fields/Success_Email__c.field-meta.xml
<CustomField>
    <fullName>Success_Email__c</fullName>
    <label>Success Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>